@@ -4,7 +4,8 @@ Controller Pro 1.0.14
 	Bug Fixes:
 
   - Fixed: Shell Execution Protocol does not destroy the spawned process (ORCJAVA-420)
-	
+  - Fixed: RRD4J URL Protocol generates incorrect URLs (ORCJAVA-441)
+
 Controller Pro 1.0.13
 =====================
 	  
